# web_server_cpp_inventory

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  sample.env
assets/: default.html  form.j2.html  index.j2.html  message.j2.html  styles.css  unix_time_to_time.js
scripts/: categories.csv  db_populate.py  items.csv  requirements.txt
src/: json_adl_pqxx_result.hpp  json_adl_pqxx_row.hpp  main.cpp
